# taiko-log-decoder

./: .env.example  Cargo.toml  Dockerfile
src/: bindings.rs  consensus_layer.rs  env_reader.rs  main.rs
src/abi/: PreconfRouter.json
src/pacaya/: config.rs  mod.rs
src/pacaya/bindings/: mod.rs
src/pacaya/bindings/abi/: PreconfWhitelist.json
src/shasta/: config.rs  mod.rs
