[package]
name = "taiko-log-decoder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", default-features = false, features = ["full"] }
alloy = { version = "1.0", default-features = false, features = [
    "full",
    "node-bindings",
    "rlp",
    "rpc-types-beacon",
    "rpc-types",
] }
reqwest = { version = "0.12", default-features = true }