[package]
name = "taiko-log-decoder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", default-features = false, features = ["full"] }
alloy = { version = "1.0", default-features = false, features = [
    "full",
    "node-bindings",
    "rlp",
    "rpc-types-beacon",
    "rpc-types",
] }
reqwest = { version = "0.12", default-features = true }
taiko_bindings = { git = "https://github.com/taikoxyz/taiko-mono.git", rev = "6640f00e5fad14bd35a31b3cb820c549bded50c8", package = "bindings" }
taiko_protocol = { git = "https://github.com/taikoxyz/taiko-mono.git", rev = "6640f00e5fad14bd35a31b3cb820c549bded50c8", package = "protocol" }
anyhow = { version = "1", default-features = false }
serde_json = { version = "1.0", default-features = false }